maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
    var min:Int = getIndication()
                               ^ShortestPathMaze:23: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
      if (getIndication()<min){
                       ^ShortestPathMaze:24: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
        min = getIndication()
                           ^ShortestPathMaze:30: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
      if (getIndication()<min){
                       ^ShortestPathMaze:31: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
        min = getIndication()
                           ^ShortestPathMaze:37: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
      if (getIndication()<min){
                       ^ShortestPathMaze:38: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
        min = getIndication()
                           ^ShortestPathMaze:44: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
      if (getIndication()<min){
                       ^ShortestPathMaze:45: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
        min = getIndication()
                           ^